--- a/Estate Predictor/Estate Predictor.csproj
+++ b/Estate Predictor/Estate Predictor.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MdXaml" Version="1.27.0" />
     <PackageReference Include="pythonnet" Version="3.0.5" />
   </ItemGroup>
 
